
  * dh-make-ruby: fix conversion of gem names with uppercase characters into
    debian package names
  * dh_ruby: don't pass LIBDIR into command line when running different
    interpreters while installed system-wide. This avoids extra
    -I/usr/lib/ruby/vendor_ruby in command lines and eases debugging running
    processes for packages that e.g. hang while running their tests.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 10 Apr 2015 10:49:34 +0200

gem2deb (0.13) experimental; urgency=medium

  [ Antonio Terceiro ]
  * dh-make-ruby: bump Standards-Version in template to 3.9.6
  * dh-make-ruby: add gem runtime dependencies to Build-Depends: as well
  * TestRunner: when running build time tests, use the full path for extra
    library directories installed in debian/$pkg
  * SetupRbInstaller: copy system copy of setup.rb instead of symlinking. This
    will fail if it's not there.
  * gem2deb: add missing dependency on ruby-setup, since setup.rb is used
    explicitly by gem2deb

  [ Christian Hofstaedtler ]
  * Remove rdoc stamp files at install time

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 09 Apr 2015 12:26:04 +0200

gem2deb (0.12) experimental; urgency=medium

  * dh_ruby: if debian/dh_ruby.{mk,rake} exists, call {make,rake} on it during
    the build. See docs in dh_ruby(1)
  * dh-make-ruby: use a cache based on the output of apt-file to map gem names
    to Debian package names when generating dependencies.
    - add apt-file to Recommends:

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 21 Feb 2015 20:34:04 -0200

gem2deb (0.11) experimental; urgency=medium

  * dh-make-ruby: generate 'Testsuite: autopkgtest-pkg-ruby' to not conflict
    with DEP-8 spec (i.e., if the 'Testsuite' field contains 'autopkgtest',
    then debian/tests/control *must* exist).
    - autopkgtest-pkg-ruby will be handled by autopkgtest and the implicit
      test control data that uses gem2deb-test-runner will be used.