@@ -6,6 +6,8 @@ gem2deb (0.14) UNRELEASED; urgency=medium
     interpreters while installed system-wide. This avoids extra
     -I/usr/lib/ruby/vendor_ruby in command lines and eases debugging running
     processes for packages that e.g. hang while running their tests.
+  * debian/requires-rubygems.overrides it not supported anymore. Patching out
+    instances of `require 'rubygems'` is now considered an antipattern.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 10 Apr 2015 10:49:34 +0200
 
